# libbbmm

./: .gitignore  BOARD.md  BbMmConfig.cmake.in  CMakeLists.txt  README.md  VERSION.md
core-src/: bbmm-mdl.h  bbmm-models.h  bbmm-pbb.h  bbmm-probabilities.h  bbmm-slv.h  bbmm-solvers.h  bbmm-structures.h  bbmm-stt.h  bbmm-values.h  bemage-pbb.h  bemage-stt.h  mdl-BmDomain.c  mdl-BmSpace.c  mdl-BmSystem.c  pbb-BmCondition.c  pbb-BmDistribution.c  pbb-BmTransition.c  pbb-BmValue.c  stt-BmBench.c  stt-BmCode.c  stt-BmNet.c  stt-BmTree.c  stt-BmValue.c  stt-basictools.c  val-BmCriteria.c  val-BmEval.c  val-BmGauge.c  val-BmValueFct.c  val-BmVector.c
core-test/: bbmm-test.h  bemage-test.h  main-testrunner.c  tc-cofeeRobot.c  tc-mld-BmDomain.c  tc-mld-BmSpace.c  tc-mld-BmSystem.c  tc-pbb-BmCondition.c  tc-pbb-BmDistribution.c  tc-pbb-BmTransition.c  tc-pbb-BmValue.c  tc-stt-BmBench.c  tc-stt-BmCode.c  tc-stt-BmNet.c  tc-stt-BmTree.c  tc-stt-BmValue.c  tc-val-BmCriteria.c  tc-val-BmEval.c  tc-val-BmMatrice.c  tc-val-BmValueFct.c  tc-val-BmVector.c
resources/: dot_mdp.tex  logo-BbMm.xcf  problem.yml
src/: bbmm-models.h  bbmm-probabilities.h  bbmm-structures.h  bbmm-values.h  bbmm.h  bench.h  cpn-BmCondition.c  cpn-BmEvaluator.c  cpn-BmInferer.c  draft.c  fct-BmCondition.c  fct-BmCriterion.c  fct-BmEvaluator.c  fct-BmFunction.c  fct-BmInferer.c  fct-BmSystem.c  fct-BmValueFct.c  mdl-BmCondition.c  mdl-BmEvaluator.c  mdl-BmInferer.c  mdl-BmSpace.c  mdl-BmSystem.c  mdl-BmTransition.c  pbb-BmCondition.c  pbb-BmDistribution.c  pbb-BmTransition.c  slv-BmDecision.c  slv-BmFunction.c  stt-BmBench.c  stt-BmCode.c  stt-BmNet.c  stt-BmTree.c  stt-BmVector.c  stt-basictools.c  val-BmEval.c  val-BmGauge.c  xtend-bbmm-variadic.c  xtend-bbmm-variadic.h
test/: bbmm-test.h  main-testrunner.c  tc-cpn-BmCondition.c  tc-cpn-BmEvaluator.c  tc-cpn-BmInferer.c  tc-dpd-basis.c  tc-dpd-bench.c  tc-dpd-system.c  tc-fct-BmCondition.c  tc-fct-BmCriterion.c  tc-fct-BmEvaluator.c  tc-fct-BmFunction.c  tc-fct-BmInferer.c  tc-fct-BmValueFct.c  tc-mdl-BmChain.c  tc-mdl-BmCondition.c  tc-mdl-BmEvaluator.c  tc-mdl-BmInferer.c  tc-mdl-BmProcess.c  tc-mdl-BmTransition.c  tc-pbb-BmCondition.c  tc-pbb-BmDistribution.c  tc-pbb-BmTransition.c  tc-slv-BmBasicPolicy.c  tc-slv-BmDecision.c  tc-stt-BmBench.c  tc-stt-BmCode.c  tc-stt-BmNet.c  tc-stt-BmTree.c  tc-stt-BmVector.c  tc-val-BmEval.c  tc-val-BmGauge.c
